# EngbertMicrosaccadeToolbox

./: readme.md  setup.cfg
.github/workflows/: my_configuration.yml
EngbertMicrosaccadeToolbox/: data_simulation.py  microsac_detection.py  movement_stats.py
demo/: demo.ipynb
engbert_microsaccade_toolbox/: microsac_detection.py
tests/: test_against_r.py  test_microsac_detection.py  test_sim_against_r.py  test_stats_against_r.py  xr.npy
