[metadata]
name = EngbertMicrosaccadeToolbox
version = 0.1
author = Lisa Schwetlick, Paul Schmitthaeuser
author_email = lisa.schwetlick@uni-potsdam.de
description = TOdo,
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lschwetlick/EngbertMicrosaccadeToolbox
project_urls =
    Bug Tracker = https://github.com/lschwetlick/EngbertMicrosaccadeToolbox
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pytest
    pandas
    matplotlib
include_package_data = True

